removed unneccessary italics

--- a/acid-baptism/index.html
+++ b/acid-baptism/index.html
@@ -104,7 +104,7 @@
 
       <div class="description-section">
         <p>
-          <em>acid baptism</em> is the side project of <em>Bailey Little</em>—an outlet for more electronic, psych, and synth-inspired music. Established in 2025.
+          acid baptism is the side project of Bailey Little—an outlet for more electronic, psych, and synth-inspired music. Established in 2025.
         </p>
       </div>
     </main>
