--- a/foam/index.html
+++ b/foam/index.html
@@ -106,11 +106,11 @@
 
       <div class="description-section">
         <p>
-          <em>Foam</em> is three friends from the emo and pop-punk scene who reunited after years apart to make loud, full shoegaze with a '90s/2000s twist. Drawing from early-2000s emo and '90s grunge, the band channels familiar influences into something heavy, melodic, and their own.
+          Foam is three friends from the emo and pop-punk scene who reunited after years apart to make loud, full shoegaze with a '90s/2000s twist. Drawing from early-2000s emo and '90s grunge, the band channels familiar influences into something heavy, melodic, and their own.
           <br><br>
-          Their debut single, "<em>Bind,</em>" explores the feeling of being trapped and the release that comes with breaking free, setting the tone for their first EP recorded in-house with <em>Mystery Class Records</em>. While <em>Foam</em> is a three-piece, their sound is anything but small, shaped by shared history, instinct, and giving each member space to shine.
+          Their debut single, "Bind," explores the feeling of being trapped and the release that comes with breaking free, setting the tone for their first EP recorded in-house with Mystery Class Records. While Foam is a three-piece, their sound is anything but small, shaped by shared history, instinct, and giving each member space to shine.
           <br><br>
-          With over a decade of collective experience in the Oklahoma music scene, <em>Foam</em> continues to play local shows, write music they're proud of, and steadily carve out their place in Oklahoma City.
+          With over a decade of collective experience in the Oklahoma music scene, Foam continues to play local shows, write music they're proud of, and steadily carve out their place in Oklahoma City.
         </p>
       </div>
     </main>
