--- a/panhandle/index.html
+++ b/panhandle/index.html
@@ -106,11 +106,11 @@
 
       <div class="description-section">
         <p>
-          <em>panhandle.</em> started in a living room in 2023, after <em>Jordan Serio</em> wrote a song processing his move from California to Oklahoma and a friend offered to help record it. Though the project has taken different shapes over time, it's primarily a solo effort, with <em>Brady Bouldin</em> joining in when he's around and contributing to recording and mixing. The sound is introspective, nostalgic Midwest emo, leaning emotional and honest, with a touch of country rock.
+          panhandle. started in a living room in 2023, after Jordan Serio wrote a song processing his move from California to Oklahoma and a friend offered to help record it. Though the project has taken different shapes over time, it's primarily a solo effort, with Brady Bouldin joining in when he's around and contributing to recording and mixing. The sound is introspective, nostalgic Midwest emo, leaning emotional and honest, with a touch of country rock.
           <br><br>
-          The project has completed a small DIY tour with stops in Oklahoma and Colorado, and has also opened for artists like <em>Luke Borchelt</em> and <em>Slow Joy</em>. Recent work includes <em>"Spiraling"</em>, recorded at Cardinal Song Studios, a song built around late-night nostalgia and the spiraling weight of memory.
+          The project has completed a small DIY tour with stops in Oklahoma and Colorado, and has also opened for artists like Luke Borchelt and Slow Joy. Recent work includes "Spiraling", recorded at Cardinal Song Studios, a song built around late-night nostalgia and the spiraling weight of memory.
           <br><br>
-          Looking ahead, <em>panhandle.</em> is focused on continued recording, releasing new music, and getting back on the road—maybe even Seattle, with a couch to crash on and his grandma in the crowd.
+          Looking ahead, panhandle. is focused on continued recording, releasing new music, and getting back on the road—maybe even Seattle, with a couch to crash on and his grandma in the crowd.
         </p>
       </div>
     </main>
