--- a/powdr/index.html
+++ b/powdr/index.html
@@ -106,11 +106,11 @@
 
       <div class="description-section">
         <p>
-          <em>powdr</em> started in high school after bonding over <em>Sleepless in Seattle</em> and writing songs that grew out of that shared feeling. What came out of it was a band that kept going, shaped by melody, momentum, and the kind of trust that only forms over time. Drawing from new wave, post-punk, krautrock, and shoegaze, their music lives somewhere between indie rock and motorik drift, shaped by familiarity and a refusal to overthink what already works.
+          powdr started in high school after bonding over Sleepless in Seattle and writing songs that grew out of that shared feeling. What came out of it was a band that kept going, shaped by melody, momentum, and the kind of trust that only forms over time. Drawing from new wave, post-punk, krautrock, and shoegaze, their music lives somewhere between indie rock and motorik drift, shaped by familiarity and a refusal to overthink what already works.
           <br><br>
-          Over nearly fifteen years, they've played everywhere from rooftops and alley shows to festival stages without changing the approach much. Entirely DIY at its core, <em>powdr</em> records everything themselves in a former recording studio turned guitar pedal shop, embracing a slow, DIY process that mirrors their long-running collaboration.
+          Over nearly fifteen years, they've played everywhere from rooftops and alley shows to festival stages without changing the approach much. Entirely DIY at its core, powdr records everything themselves in a former recording studio turned guitar pedal shop, embracing a slow, DIY process that mirrors their long-running collaboration.
           <br><br>
-          The band is made up of <em>Josh Peck</em> (guitar, vocals), <em>Brent Hodge</em> (drums, vocals), <em>Kilyn Massey</em> (bass, vocals), and <em>Peyton Wilson</em> (guitar, synth), each contributing to a sound that feels settled, unforced, and quietly confident.
+          The band is made up of Josh Peck (guitar, vocals), Brent Hodge (drums, vocals), Kilyn Massey (bass, vocals), and Peyton Wilson (guitar, synth), each contributing to a sound that feels settled, unforced, and quietly confident.
         </p>
       </div>
     </main>
