--- a/toad-socks/index.html
+++ b/toad-socks/index.html
@@ -106,9 +106,9 @@
 
       <div class="description-section">
         <p>
-          <em>Toad Socks</em> began as a side project between three roommates who decided to personify themselves as toads.
+          Toad Socks began as a side project between three roommates who decided to personify themselves as toads.
           <br><br>
-          The project now lives on as a collaboration between <em>Honey Payton</em> of <em>Sweetest Pot</em> and <em>Bailey Little</em> of <em>Cryhard</em>. Originally centered around hip-hop and rap, <em>Toad Socks'</em> sound has since bent toward synth pop, alternative, and experimental territory.
+          The project now lives on as a collaboration between Honey Payton of Sweetest Pot and Bailey Little of Cryhard. Originally centered around hip-hop and rap, Toad Socks' sound has since bent toward synth pop, alternative, and experimental territory.
         </p>
       </div>
     </main>
