--- a/cryhard/index.html
+++ b/cryhard/index.html
@@ -106,9 +106,9 @@
 
       <div class="description-section">
         <p>
-          <em>Cryhard</em> officially began in 2018, cycling through several names before finally landing on Cryhard—a name that came to be from typing “Cry” into a random name generator. While the name changed, members came and went, albums were recorded, released, and deleted—it was time to start over for the last time. In 2023, a new lineup began to take shape, leading to the release of their debut LP, <em>Of Course I Will</em>. 
+          Cryhard officially began in 2018, cycling through several names before finally landing on Cryhard—a name that came to be from typing “Cry” into a random name generator. While the name changed, members came and went, albums were recorded, released, and deleted—it was time to start over for the last time. In 2023, a new lineup began to take shape, leading to the release of their debut LP, <em>Of Course I Will</em>. 
           <br><br>
-          Today, the band consists of <em>Bailey Little</em> (vocals, guitar, bass), <em>Patrick Hanscom</em> (vocals, guitar), <em>Jenny Mayes</em> (guitar, bass), and <em>Malcolm Bensinger</em> (drums, percussion). This lineup defines their live performances, but when recording and writing, no one is a stranger to swapping instruments or helping shape the overall arrangements.
+          Today, the band consists of Bailey Little (vocals, guitar, bass), Patrick Hanscom (vocals, guitar), Jenny Mayes (guitar, bass), and Malcolm Bensinger (drums, percussion). This lineup defines their live performances, but when recording and writing, no one is a stranger to swapping instruments or helping shape the overall arrangements.
           <br><br>
           Looking forward, the band announces their 2nd full length LP <em>Before You Knew Me</em> coming summer 2026.
         </p>
