--- a/idiot-mile/index.html
+++ b/idiot-mile/index.html
@@ -105,13 +105,13 @@
 
       <div class="description-section">
         <p>
-          <em>Idiot Mile</em> began as <em>Pillow Head</em>, formed by <em>Ethan Dillard</em> (guitar, vocals), <em>Zachary Roberts</em> (drums), and <em>Henry Shields</em> (bass). As the project developed, <em>Austin Hazelton</em> (guitar, vocals) joined, helping shape much of the band's early direction. Not long after, <em>Shields</em> stepped away, and the band transitioned into a new chapter under the name <em>Idiot Mile</em>.
+          Idiot Mile began as Pillow Head, formed by Ethan Dillard (guitar, vocals), Zachary Roberts (drums), and Henry Shields (bass). As the project developed, Austin Hazelton (guitar, vocals) joined, helping shape much of the band's early direction. Not long after, Shields stepped away, and the band transitioned into a new chapter under the name Idiot Mile.
           <br><br>
-          In the early stretch of <em>Idiot Mile</em>, <em>Taylor Haynes</em> (bass) filled in during a transitional period before <em>Riley Smith</em> (bass) joined, solidifying the current lineup. With the band fully in place, <em>Idiot Mile</em> leaned into a sound built on loud guitars, blending slowcore and shoegaze with a strain of '90s nostalgia that still feels rooted in the present.
+          In the early stretch of Idiot Mile, Taylor Haynes (bass) filled in during a transitional period before Riley Smith (bass) joined, solidifying the current lineup. With the band fully in place, Idiot Mile leaned into a sound built on loud guitars, blending slowcore and shoegaze with a strain of '90s nostalgia that still feels rooted in the present.
           <br><br>
-          Songs like "<em>Call Me</em>," written by <em>Hazelton</em> years before he officially joined the band, became some of <em>Idiot Mile's</em> earliest releases and helped define their sound early on. Since then, the band has played local venues and DIY shows, released music through <em>Mystery Class Records</em>, and had their work featured on <em>KATT 100.5 FM</em>.
+          Songs like "Call Me," written by Hazelton years before he officially joined the band, became some of Idiot Mile's earliest releases and helped define their sound early on. Since then, the band has played local venues and DIY shows, released music through Mystery Class Records, and had their work featured on KATT 100.5 FM.
           <br><br>
-          <em>Idiot Mile</em> is currently finishing their debut album and preparing to take the band on the road.
+          Idiot Mile is currently finishing their debut album and preparing to take the band on the road.
         </p>
       </div>
     </main>
