--- a/sweetest-pot/index.html
+++ b/sweetest-pot/index.html
@@ -106,13 +106,13 @@
 
       <div class="description-section">
         <p>
-          <em>Sweetest Pot</em> began in 2018 as a solo project by producer <em>Honey</em>, created in a bedroom in the heart of downtown Oklahoma City. Initially focused on experimental hip-hop beats and instrumentals, <em>Honey</em> also collaborated on side projects, including Toad Socks. In 2021, <em>Sweetest Pot</em> released <em>"Burner Tape Vol. 1"</em>, followed by <em>Vol. 2</em> in 2022, marking a pivotal step in their evolution.
+          Sweetest Pot began in 2018 as a solo project by producer Honey, created in a bedroom in the heart of downtown Oklahoma City. Initially focused on experimental hip-hop beats and instrumentals, Honey also collaborated on side projects, including Toad Socks. In 2021, Sweetest Pot released <em>Burner Tape Vol. 1</em>, followed by <em>Vol. 2</em> in 2022, marking a pivotal step in their evolution.
           <br><br>
-          By late 2022, <em>Sweetest Pot</em> expanded from a solo project into an all-women live trio. As live performances increased, <em>Honey</em> brought in <em>Marisa Brown</em>, the voice actor behind the project's mascot, <em>Fia</em>, to contribute vocals, lyrics, and onstage energy. <em>Jennifer Mayes</em>, guitarist of <em>Cryhard</em>, also joined, adding a new dynamic to both the live performances and the songwriting.
+          By late 2022, Sweetest Pot expanded from a solo project into an all-women live trio. As live performances increased, Honey brought in Marisa Brown, the voice actor behind the project's mascot, Fia, to contribute vocals, lyrics, and onstage energy. Jennifer Mayes, guitarist of Cryhard, also joined, adding a new dynamic to both the live performances and the songwriting.
           <br><br>
-          While live shows and releases slowed in 2023, the project never stopped moving forward. <em>Sweetest Pot</em> returned in the final quarter of 2025 with a run of fifteen new song releases, including an EP.
+          While live shows and releases slowed in 2023, the project never stopped moving forward. Sweetest Pot returned in the final quarter of 2025 with a run of fifteen new song releases, including an EP.
           <br><br>
-          Originally rooted in hip-hop and chaotic song structures, <em>Sweetest Pot</em> has since shifted into what they describe as “Theoretical Jazz”—a fusion of experimental synthwave, varied drum styles, glitching vocals, and dynamic sampling.
+          Originally rooted in hip-hop and chaotic song structures, Sweetest Pot has since shifted into what they describe as “Theoretical Jazz”—a fusion of experimental synthwave, varied drum styles, glitching vocals, and dynamic sampling.
         </p>
       </div>
     </main>
