fixed hero img size and margin

--- a/index.html
+++ b/index.html
@@ -61,28 +61,34 @@
     <!-- Featured Release Section -->
     <div class="featured-release">
       <div class="featured-release-hero">
-      <img src="assets/images/products/mcr-012/latest-release.webp" alt="Latest Release">
+      <img src="assets/images/products/mcr-016/latest-release.webp" alt="Latest Release">
       </div>
 
       <div class="falling-shapes">
-        <img src="assets/images/products/mcr-012/effect.webp" class="shape" style="--i:1;">
-        <img src="assets/images/products/mcr-012/effect.webp" class="shape" style="--i:2;">
-        <img src="assets/images/products/mcr-012/effect.webp" class="shape" style="--i:3;">
-        <img src="assets/images/products/mcr-012/effect.webp" class="shape" style="--i:4;">
+        <img src="assets/images/products/mcr-016/effect.webp" class="shape" style="--i:1;">
+        <img src="assets/images/products/mcr-016/effect1.webp" class="shape" style="--i:2;">
+        <img src="assets/images/products/mcr-016/effect2.webp" class="shape" style="--i:3;">
+        <img src="assets/images/products/mcr-016/effect3.webp" class="shape" style="--i:4;">
+        <img src="assets/images/products/mcr-016/effect4.webp" class="shape" style="--i:5;">
+        <img src="assets/images/products/mcr-016/effect5.webp" class="shape" style="--i:6;">
+        <img src="assets/images/products/mcr-016/effect.webp" class="shape" style="--i:7;">
+        <img src="assets/images/products/mcr-016/effect1.webp" class="shape" style="--i:8;">
       </div>
 
-
       <div class="release-text">
-        <h2 class="release-heading">LATEST RELEASE</h2>
-        <h3 class="release-title">Demo.nstration #3</h3>
-        <div class="rainbow-underline"></div>
+      
+        <div class="release-title-container">
+          <h2 class="release-heading">LATEST RELEASE</h2>
+          <h3 class="release-title">Demo.nstration #3</h3>
+          <div class="rainbow-underline"></div>
+        </div>
         <p>
           In collaboration with Zaragoza Record House—this is the 3rd EP and cassette of the Hobbyist, Demo.nstration Series.
         <br><br>
           Limited to only 5, get your hands on one before they're gone!
         </p>
         <button class="pre-order-button" onclick="location.href='store/mcr-012/'">
-          BUY NOW
+          PRE-ORDER
         </button>        
       </div>
     </div>
