--- a/roster/index.html
+++ b/roster/index.html
@@ -117,6 +117,19 @@
             </div>
           </a>
 
+          <a href="../hobbyist/" class="artist-link">
+            <div class="artist-block">
+              <div class="artist-block-image-container">
+                <img src="../assets/images/artists/hobbyist/hobbyist-portrait.webp" alt="" class="artist-block-image">
+              </div>
+              <div class="artist-block-details-container">
+                <div class="artist-block-name-container">
+                  <p class="artist-block-artist-name">Hobbyist,</p>
+                </div>
+              </div>
+            </div>
+          </a>
+
           <a href="../idiot-mile/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
@@ -172,7 +185,7 @@
           <a href="../sliderhand/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets/images/artists/sliderhand/sliderhand-portrait.webp" alt="" class="artist-block-image">
+                <img src="../assets/images/artists/sliderhand/sliderhand-portraitv2.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
