--- a/sliderhand/index.html
+++ b/sliderhand/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="artist-media">
         <!-- If landscape artist photo, use this -->
-        <img src="../../assets/images/artists/sliderhand/sliderhand-portrait.webp" alt="" class="artist-image is-landscape">
+        <img src="../../assets/images/artists/sliderhand/sliderhand-portraitv2.webp" alt="" class="artist-image is-landscape">
         
         <!-- If square artist photo, use this -->
         <!-- <img src="../../assets/images/artists/idiot-mile/idiot-mile-live.webp" alt="" class="artist-image is-square"> -->
@@ -69,6 +69,16 @@
           </div>
         </div>
       </div>
+
+      <div class="description-section">
+        <p>
+          Deep in a hole in the ground, far beneath the twice-burnt glade, under a mountain of medium size, we found a rough little box. On its lid were the words “BEWARE THE SLIDERHAND.”
+          <br><br>
+          Before chucking the box and its contents into a river, we extracted a few tracks from a worn reel of tape (the rest of its contents were unmentionable and old) and are now entrusting them to you.
+        </p>
+      </div>
+    </main>
+
     </main>
 
     <section class="artist-videos">
