started cassette product page

--- a/store/index.html
+++ b/store/index.html
@@ -51,6 +51,42 @@
         <h1 class="store-heading">STORE</h1>
         <div class="store-grid">
 
+          <a href="mcr-015-cd/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-015-cd/mcr-015-cd.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-015-cd/mcr-015-cd-hover.webp" alt="" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                  <p class="merch-block-product-name">SIDE QUESTS VOL. 2 - CD</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$15</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="mcr-015/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="../assets/images/products/mcr-015/mcr-015.webp" alt="" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-015/mcr-015-hover.webp" alt="" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                  <p class="merch-block-product-name">SIDE QUESTS VOL. 2 - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
           <a href="cryhrd-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
