fixed hobbyist location

--- a/hobbyist/index.html
+++ b/hobbyist/index.html
@@ -49,10 +49,8 @@
     <main class="artist-section">
       <div class="artist-heading">
         <h1 class="artist-name">Hobbyist,</h1>
-        <p class="artist-location">Oklahoma City, OK</p>
+        <p class="artist-location">Denver, CO</p>
       </div>
-
-
 
       <div class="artist-media">
         <!-- If landscape artist photo, use this -->
