product pages mostly done

--- a/store/mcr-016-cd/index.html
+++ b/store/mcr-016-cd/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Side Quests Vol. 2 - MYSTERY CLASS RECORDS</title>
+    <title>CD - Side Quests Vol. 2 - MYSTERY CLASS RECORDS</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/faviconv2.png" type="image/x-icon">
@@ -49,7 +49,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/mcr-015/mcr-015-full.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 2 Cassette">
+          <img src="../../assets/images/products/mcr-016/mcr-016-full.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 2 Cassette">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -60,10 +60,10 @@
           <p class="release-date">Release Date: March 6, 2026</p>
           <hr class="separator">
           <div class="price-and-button">
-            <span class="product-price">$10</span>
+            <span class="product-price">$15</span>
             <div class="product-buy-button">
 
-              <div id='product-component-1738351530358'></div>
+              <div id='product-component-1769819344215'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -91,8 +91,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '7723835916342',
-                      node: document.getElementById('product-component-1738351530358'),
+                      id: '8170058743862',
+                      node: document.getElementById('product-component-1769819344215'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                       "product": {
@@ -412,9 +412,9 @@
           <div class="pressing-info">
             <h3>Product Info:</h3>
             <div class="vertical-whitespace"></div>
-            <p>First Edition Real-Time Dubbed</p>
-            <p>Hazey Purple Cassette x40</p>
-            <p>MCR-015</p>
+            <p>First Edition Pressing</p>
+            <p>Custom Compact Disc x50</p>
+            <p>MCR-016</p>
           </div>
         </div>
       </div>
@@ -424,9 +424,9 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Bet you weren't sure if we'd do it—but the answer is YES. Our second-ever various artists compilation, <em>Side Quests Vol. 2</em>, is here. This year, we went with an SSX-inspired winter sports theme, and to match it, we brought together 12 of our favorite Oklahoma artists, each contributing one original track for the occasion.
+        Bet you weren't sure if we'd do it—but the answer is YES. Our second-ever various artists compilation, Side Quests Vol. 2, is here, and so is our first-ever CD. This year, we went with an SSX-inspired winter sports theme, and to match it, we brought together 12 of our favorite Oklahoma artists, each contributing one original track for the occasion.
         <br><br>
-        Limited to 40 copies. Comes with a Hi-Fi real-time dubbed hazey purple cassette tape with A/B labels, a double-sided J-slip, a numbered card, and a transparent case.
+        Limited to 50 copies. Comes with a custom compact disc, front and back graphic inserts, a CD tray graphic insert, and a transparent jewel case.
         <br><br>
         Music from: Foam, Morris Village, powdr, FEVEREST, Computer Girl, Easier, Compost Adjacent, Sockbones, Gabriel Hancock & the Sick Forms, acid baptism, Pageant Dad, and Sweetest Pot.
       </p>
@@ -445,16 +445,52 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-            <a href="../mcr-002/" class="merch-link">
+            <a href="../mcr-016/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-016/mcr-016.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-016/mcr-016-hover.webp" alt="" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                    <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                    <p class="merch-block-product-name">SIDE QUESTS VOL. 2 - CASSETTE</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../new-005/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">Mystery Class Records</p>
+                    <p class="merch-block-product-name">Mystery Class Hat</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$30</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../mcr-007/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/mcr-007/mcr-007.webp" alt="" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">powdr</p>
+                    <p class="merch-block-product-name">Settle Pain - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
@@ -473,42 +509,6 @@
                   <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">Sweetest Pot</p>
                     <p class="merch-block-product-name">Burner Tape, Vol. 2 - Cassette</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../mcr-004/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Toad Socks</p>
-                    <p class="merch-block-product-name">Pond - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
-            <a href="../mcr-003/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-003/mcr-003.webp" alt="" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-003/mcr-003-hover.webp" alt="" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">STRETCH US OUTTA HERE - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
