--- a/index.html
+++ b/index.html
@@ -79,15 +79,17 @@
       
         <div class="release-title-container">
           <h2 class="release-heading">LATEST RELEASE</h2>
-          <h3 class="release-title">Demo.nstration #3</h3>
+          <h3 class="release-title">Side Quests Vol. 2</h3>
           <div class="rainbow-underline"></div>
         </div>
         <p>
-          In collaboration with Zaragoza Record House—this is the 3rd EP and cassette of the Hobbyist, Demo.nstration Series.
-        <br><br>
-          Limited to only 5, get your hands on one before they're gone!
+          Bet you weren't sure if we'd do it—but the answer is YES.
+          <br><br>
+          Our second-ever various artists compilation, Side Quests Vol. 2, is here, and so is our first-ever CD.
+          <br><br>
+          This year, we went with an SSX-inspired winter sports theme, and to match it, we brought together 12 of our favorite Oklahoma artists, each contributing one original track for the occasion.
         </p>
-        <button class="pre-order-button" onclick="location.href='store/mcr-012/'">
+        <button class="pre-order-button" onclick="location.href='store/mcr-016-cd/'">
           PRE-ORDER
         </button>        
       </div>
@@ -97,11 +99,11 @@
     <div class="store-section">
       <div class="store-grid">
 
-        <a href="store/mcr-015-cd/" class="merch-link">
+        <a href="store/mcr-016-cd/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="assets/images/products/mcr-015-cd/mcr-015-cd.webp" alt="" class="merch-block-product-image default-image">
-                <img src="assets/images/products/mcr-015-cd/mcr-015-cd-hover.webp" alt="" class="merch-block-product-image hover-image">
+                <img src="assets/images/products/mcr-016-cd/mcr-016-cd.webp" alt="" class="merch-block-product-image default-image">
+                <img src="assets/images/products/mcr-016-cd/mcr-016-cd-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -115,11 +117,11 @@
             </div>
           </a>
 
-          <a href="store/mcr-015/" class="merch-link">
+          <a href="store/mcr-016/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="assets/images/products/mcr-015/mcr-015.webp" alt="" class="merch-block-product-image default-image">
-                <img src="assets/images/products/mcr-015/mcr-015-hover.webp" alt="" class="merch-block-product-image hover-image">
+                <img src="assets/images/products/mcr-016/mcr-016.webp" alt="" class="merch-block-product-image default-image">
+                <img src="assets/images/products/mcr-016/mcr-016-hover.webp" alt="" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
