added another line break to description

--- a/store/mcr-016-cd/index.html
+++ b/store/mcr-016-cd/index.html
@@ -424,7 +424,9 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Bet you weren't sure if we'd do it—but the answer is YES. Our second-ever various artists compilation, Side Quests Vol. 2, is here, and so is our first-ever CD. This year, we went with an SSX-inspired winter sports theme, and to match it, we brought together 12 of our favorite Oklahoma artists, each contributing one original track for the occasion.
+        Bet you weren't sure if we'd do it—but the answer is YES. Our second-ever various artists compilation, Side Quests Vol. 2, is here, and so is our first-ever CD.
+        <br><br>
+        This year, we went with an SSX-inspired winter sports theme, and to match it, we brought together 12 of our favorite Oklahoma artists, each contributing one original track for the occasion.
         <br><br>
         Limited to 50 copies. Comes with a custom compact disc, front and back graphic inserts, a CD tray graphic insert, and a transparent jewel case.
         <br><br>
