--- a/store/mcr-016/index.html
+++ b/store/mcr-016/index.html
@@ -424,7 +424,9 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        Bet you weren't sure if we'd do it—but the answer is YES. Our second-ever various artists compilation, <em>Side Quests Vol. 2</em>, is here. This year, we went with an SSX-inspired winter sports theme, and to match it, we brought together 12 of our favorite Oklahoma artists, each contributing one original track for the occasion.
+        Bet you weren't sure if we'd do it—but the answer is YES. Our second-ever various artists compilation, <em>Side Quests Vol. 2</em>, is here.
+        <br><br>
+        This year, we went with an SSX-inspired winter sports theme, and to match it, we brought together 12 of our favorite Oklahoma artists, each contributing one original track for the occasion.
         <br><br>
         Limited to 40 copies. Comes with a Hi-Fi real-time dubbed hazey purple cassette tape with A/B labels, a double-sided J-slip, a numbered card, and a transparent case.
         <br><br>
