--- a/store/mcr-016-cd/index.html
+++ b/store/mcr-016-cd/index.html
@@ -49,7 +49,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/mcr-016/mcr-016-full.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 2 Cassette">
+          <img src="../../assets/images/products/mcr-016/mcr-016-cd-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 2 Cassette">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -59,6 +59,10 @@
           <div class="vertical-whitespace"></div>
           <p class="release-date">Release Date: March 6, 2026</p>
           <hr class="separator">
+          <select class="product-dropdown" onchange="location.href=this.value">
+            <option value="" selected>CD</option>
+            <option value="../mcr-016/">Cassette</option>
+          </select>
           <div class="price-and-button">
             <span class="product-price">$15</span>
             <div class="product-buy-button">
@@ -400,12 +404,18 @@
             <h3>Track List</h3>
             <div class="vertical-whitespace"></div>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-
+              <li>Outta Control - powdr</li>
+              <li>Redundant - Easier</li>
+              <li>Menace to Sobriety - Morris Village</li>
+              <li>Godsend - Pageant Dad</li>
+              <li>What A Shame - Feverest</li>
+              <li>Playing Dead - Foam</li>
+              <li>Sand - Gabriel Hancock & the Sick Forms</li>
+              <li>Someday pt. 1 - Compost Adjacent</li>
+              <li>Boss Fite - acid baptism</li>
+              <li>Absolutely Garibaldi - Computer Girl</li>
+              <li>Avalanche - sockbones</li>
+              <li>Ski Lift - Sweetest Pot</li>
             </ol>
           </div>
           <hr class="separator">
