--- a/index.html
+++ b/index.html
@@ -61,28 +61,34 @@
     <!-- Featured Release Section -->
     <div class="featured-release">
       <div class="featured-release-hero">
-      <img src="assets/images/products/mcr-012/latest-release.webp" alt="Latest Release">
+      <img src="assets/images/products/mcr-016/latest-release.webp" alt="Latest Release">
       </div>
 
       <div class="falling-shapes">
-        <img src="assets/images/products/mcr-012/effect.webp" class="shape" style="--i:1;">
-        <img src="assets/images/products/mcr-012/effect.webp" class="shape" style="--i:2;">
-        <img src="assets/images/products/mcr-012/effect.webp" class="shape" style="--i:3;">
-        <img src="assets/images/products/mcr-012/effect.webp" class="shape" style="--i:4;">
+        <img src="assets/images/products/mcr-016/effect.webp" class="shape" style="--i:1;">
+        <img src="assets/images/products/mcr-016/effect1.webp" class="shape" style="--i:2;">
+        <img src="assets/images/products/mcr-016/effect2.webp" class="shape" style="--i:3;">
+        <img src="assets/images/products/mcr-016/effect3.webp" class="shape" style="--i:4;">
+        <img src="assets/images/products/mcr-016/effect4.webp" class="shape" style="--i:5;">
+        <img src="assets/images/products/mcr-016/effect5.webp" class="shape" style="--i:6;">
+        <img src="assets/images/products/mcr-016/effect.webp" class="shape" style="--i:7;">
+        <img src="assets/images/products/mcr-016/effect1.webp" class="shape" style="--i:8;">
       </div>
 
-
       <div class="release-text">
-        <h2 class="release-heading">LATEST RELEASE</h2>
-        <h3 class="release-title">Demo.nstration #3</h3>
-        <div class="rainbow-underline"></div>
+      
+        <div class="release-title-container">
+          <h2 class="release-heading">LATEST RELEASE</h2>
+          <h3 class="release-title">Side Quests Vol. 2</h3>
+          <div class="rainbow-underline"></div>
+        </div>
         <p>
-          In collaboration with Zaragoza Record House—this is the 3rd EP and cassette of the Hobbyist, Demo.nstration Series.
-        <br><br>
-          Limited to only 5, get your hands on one before they're gone!
+          Bet you weren't sure if we'd do it—but the answer is YES.
+          <br><br>
+          Our second-ever various artists compilation, Side Quests Vol. 2, is here, and so is our first-ever CD.
         </p>
-        <button class="pre-order-button" onclick="location.href='store/mcr-012/'">
-          BUY NOW
+        <button class="pre-order-button" onclick="location.href='store/mcr-016-cd/'">
+          PRE-ORDER
         </button>        
       </div>
     </div>
@@ -90,6 +96,42 @@
     <!-- Store Section -->
     <div class="store-section">
       <div class="store-grid">
+
+        <a href="store/mcr-016-cd/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="assets/images/products/mcr-016/mcr-016-cd.webp" alt="" class="merch-block-product-image default-image">
+                <img src="assets/images/products/mcr-016/mcr-016-cd-hover.webp" alt="" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                  <p class="merch-block-product-name">SIDE QUESTS VOL. 2 - CD</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$15</div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="store/mcr-016/" class="merch-link">
+            <div class="merch-block">
+              <div class="merch-block-image-container">
+                <img src="assets/images/products/mcr-016/mcr-016.webp" alt="" class="merch-block-product-image default-image">
+                <img src="assets/images/products/mcr-016/mcr-016-hover.webp" alt="" class="merch-block-product-image hover-image">
+              </div>
+              <div class="merch-block-details-container">
+                <div class="merch-block-names-container">
+                  <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                  <p class="merch-block-product-name">SIDE QUESTS VOL. 2 - CASSETTE</p>
+                </div>
+                <div class="merch-block-price-container">
+                  <div class="merch-block-price">$10</div>
+                </div>
+              </div>
+            </div>
+          </a>
 
         <a href="store/cryhrd-001/" class="merch-link">
           <div class="merch-block">
